// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-breadcrumbs-beta #render should render component as expected (1) 1`] = `
<gux-breadcrumbs-beta>
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container"></nav>
</gux-breadcrumbs-beta>
`;

exports[`gux-breadcrumbs-beta #render should render component as expected (2) 1`] = `
<gux-breadcrumbs-beta>
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container">
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Category
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content" href="#">
          Parent
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Current
        </span>
      </span>
    </gux-breadcrumb-item>
  </nav>
</gux-breadcrumbs-beta>
`;

exports[`gux-breadcrumbs-beta #render should render component as expected (3) 1`] = `
<gux-breadcrumbs-beta>
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container">
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Category
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content" href="#">
          Parent
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Current
        </span>
      </span>
    </gux-breadcrumb-item>
  </nav>
</gux-breadcrumbs-beta>
`;

exports[`gux-breadcrumbs-beta #render should render component as expected (4) 1`] = `
<gux-breadcrumbs-beta accent="primary">
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container">
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Category
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <a class="gux-breadcrumb-content" href="#">
          Parent
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-primary">
        <span class="gux-breadcrumb-content">
          Current
        </span>
      </span>
    </gux-breadcrumb-item>
  </nav>
</gux-breadcrumbs-beta>
`;

exports[`gux-breadcrumbs-beta #render should render component as expected (5) 1`] = `
<gux-breadcrumbs-beta accent="secondary">
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container">
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-secondary">
        <span class="gux-breadcrumb-content">
          Category
        </span>
        <gux-icon class="gux-breadcrumb-separator" decorative="" icon-name="ic-chevron-small-right"></gux-icon>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-secondary">
        <a class="gux-breadcrumb-content" href="#">
          Parent
        </a>
        <gux-icon class="gux-breadcrumb-separator" decorative="" icon-name="ic-chevron-small-right"></gux-icon>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-secondary">
        <span class="gux-breadcrumb-content">
          Current
        </span>
      </span>
    </gux-breadcrumb-item>
  </nav>
</gux-breadcrumbs-beta>
`;

exports[`gux-breadcrumbs-beta #render should render component as expected (6) 1`] = `
<gux-breadcrumbs-beta accent="invalid">
  <!---->
  <nav aria-label="Breadcrumbs" class="gux-breadcrumbs-container">
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-invalid">
        <span class="gux-breadcrumb-content">
          Category
        </span>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item href="#">
      <!---->
      <span class="gux-breadcrumb-generation gux-invalid">
        <a class="gux-breadcrumb-content" href="#">
          Parent
        </a>
        <span aria-hidden="true" class="gux-breadcrumb-separator">
          /
        </span>
      </span>
    </gux-breadcrumb-item>
    <gux-breadcrumb-item>
      <!---->
      <span class="gux-breadcrumb-generation gux-invalid">
        <span class="gux-breadcrumb-content">
          Current
        </span>
      </span>
    </gux-breadcrumb-item>
  </nav>
</gux-breadcrumbs-beta>
`;
